// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Launchdarkly's aliasUser destination action: all fields 1`] = `
Array [
  Object {
    "context": Object {
      "kind": "multi",
      "qkWpQ2NP*4": Object {
        "key": "qkWpQ2NP*4",
      },
    },
    "creationDate": 1612137600000,
    "kind": "identify",
  },
]
`;

exports[`Testing snapshot for Launchdarkly's aliasUser destination action: required fields 1`] = `
Array [
  Object {
    "context": Object {
      "kind": "multi",
      "qkWpQ2NP*4": Object {
        "key": "qkWpQ2NP*4",
      },
    },
    "creationDate": Any<Number>,
    "kind": "identify",
  },
]
`;
